# Tesis

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  commit_log.csv  compose.win.cuda.yaml  compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
containers/apptainer/: iae.def  trainer.def
containers/docker/: Dockerfile  Dockerfile.original_iae  Dockerfile.original_predator  Dockerfile.trainer  compose.linux.cuda.iae.yaml  compose.linux.cuda.lim.yaml  compose.linux.cuda.predator.yaml
containers/docker/compose/: compose.linux.cuda.geotransformer.yaml  compose.win.cuda.yaml
customModels/: cofinet.py  modelI.py  predator.py
customModels/IAE/: decoder.py  encoder.py  iae.py
customModels/LIM/: encoder.py  lim.py
database/: cloud.py  cloudPairs.py  pairs.py  point.py  scanNet.py  threeDLoMatch.py
docker/: compose.linux.cuda.iae.yaml  compose.linux.cuda.lim.yaml  compose.linux.cuda.predator.yaml  compose.linux.cuda.yaml  compose.linux.rocm.yaml  compose.win.cuda.yaml
metrics/: metricI.py  metrics.py
scripts/: build_original_iae.sh  build_sif.sh  entrypoint.sh  generate_3dLoMatch.py  get_datasets.sh  install_dependencies.sh  train_IAE.sh  train_IAE_original.sh  train_IAE_recreation.sh  train_PREDATOR.sh  train_PREDATOR_original.sh  train_PREDATOR_recreation.sh
src/: basic.py  basic2.py  basic3.py  evaluate_registration.py  main.py  test.py  viewer.py
src/LIM/cpp/: compile.sh
src/LIM/log/: __init__.py  console.py
src/LIM/metrics/: __init__.py  losses.py  metricI.py  metrics.py
src/LIM/models/: evaluator.py  modelI.py  trainer.py
src/LIM/scripts/: generate_3dLoMatch.py  get_datasets.sh  get_model_weights.sh  install_dependencies.sh
src/LIM/training/: run_state.py  threading.py  trainer.py
src/config/: IAE.yaml  IAE_recreation.yaml  IAE_toy.yaml  LIM.yaml  PREDATOR_recreation.yaml  PREDATOR_toy.yaml  config.py  config.yaml  frozenIAE.yaml
src/debug/: context.py  decorators.py
(+132 files in other folders)
