[project]
name = "less-is-more"
version = "0.0.1"
description = "Francisco Molina's Master Thesis"
authors = ["fmolinaleiv@gmail.com"]
requires-python = "==3.11.9"
dependencies = [
    "aim>=3.29.1",
    "alive-progress>=3.2.0",
    "from-root>=1.3.0",
    "msgpack>=1.1.0",
    "msgpack-numpy>=0.4.8",
    "multimethod>=2.0",
    "open3d>=0.19.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# [tool.uv]
# find-links = [
# 	"https://data.pyg.org/whl/torch-2.4.1+cu124.html"
# ]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath="src"
testpaths=["test"]
filterwarnings = [
    "ignore::sqlalchemy.exc.MovedIn20Warning"
]


